# TTK4111_Reguleringsteknikk_2024_HOST

./: .gitignore  hello.py  pyproject.toml
Øving 5/gpt/: oppgave_1.md  oppgave_1.mmd
Øving 5/ipynb/: oppgave_1.ipynb  oppgave_2.ipynb  oving_5.ipynb
